Removed unused variables.